kubernetes/infrastructure/observability/kibana/kibana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
  namespace: elastic-system
  labels:
    app.kubernetes.io/name: kibana
    app.kubernetes.io/component: log-visualization
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
  hostnames:
    - "kibana.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: production-kibana-kb-http
          port: 5601
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: elasticsearch
  namespace: elastic-system
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/component: log-storage
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
  hostnames:
    - "elastic.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: production-cluster-es-http
          port: 9200
